--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,18 @@
-<h1>Display your Pirate here</h1>
-
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title><%= "#{@pirate.name}'s Ships" %></title>
+  </head>
+  <body>
+    <p>Pirate's Name: <%= @pirate.name %></p>
+    <p>Pirate's Height: <%= @pirate.height %></p>
+    <p>Pirate's Weight: <%= @pirate.weight %></p>
+    <p>Ship's Name: <%= @ship_1.name %></p>
+    <p>Ship's Type: <%= @ship_1.type %></p>
+    <p>Ship's Booty: <%= @ship_1.booty %></p>
+    <p>Ship's Name: <%= @ship_2.name %></p>
+    <p>Ship's Type: <%= @ship_2.type %></p>
+    <p>Ship's Booty: <%= @ship_2.booty %></p>
+  </body>
+</html>
