Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -8,26 +8,33 @@
     <form action="/pirates" method="post">
       <!-- labels for pirates -->
       <label for="pirate_name">Pirate Name: </label>
-      <input type="text" id="pirate[name]" name="pirate[name]">
+      <input type="text" id="pirate_name" name="pirate[name]">
+
       <label for="pirate_weight">Pirate Weight: </label>
-      <input type="text" id="pirate[weight]" name="pirate[weight]">
+      <input type="text" id="pirate_weight" name="pirate[weight]">
+
       <label for="pirate_name">Pirate Height: </label>
-      <input type="text" id="pirate[height]" name="pirate[height]">
+      <input type="text" id="pirate_height" name="pirate[height]">
 
       <!-- pirate ship one -->
       <label for="ship_name_1">Ship 1's Name: </label>
       <input type="text" name="pirate[ships][][name]" id="ship_name_1">
+
       <label for="ship_type_1">Ship 1's Type: </label>
       <input type="text" name="pirate[ships][][type]" id="ship_type_1">
+
       <label for="ship_booty_1">Ship 1's Booty: </label>
       <input type="text" name="pirate[ships][][booty]" id="ship_booty_1">
       <!-- pirate ship two -->
       <label for="ship_name_2">Ship 2's Name: </label>
       <input type="text" name="pirate[ships][][name]" id="ship_name_2">
+
       <label for="ship_type_2">Ship 2's Type: </label>
       <input type="text" name="pirate[ships][][type]" id="ship_type_2">
+
       <label for="ship_booty_2">Ship 2's Booty: </label>
       <input type="text" name="pirate[ships][][booty]" id="ship_booty_2">
+
       <input type="submit" value="Submit">
     </form>
   </body>
